--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: white;
+    font-family: 'VT323', monospace;
 }
 
 #container {
@@ -45,7 +46,7 @@ body {
     border-radius: 8px;
     border-style: none;
     color: white;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: bold;
 }
 
@@ -54,9 +55,14 @@ body {
 }
 
 .title {
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
     color: #e45b5b;
+    text-shadow: 1px 1px #868383;
+}
+
+.fa-sharp {
+    color: #3f3e3e;
+    text-shadow: 1px 1px #868383;
 }
 
 .reload {
@@ -71,7 +77,7 @@ body {
     border-radius: 8px;
     border-style: none;
     color: white;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: bold;
 }
 
@@ -86,7 +92,7 @@ body {
     border-radius: 8px;
     border-style: none;
     color: white;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: bold;
 }
 
